# gh-notify

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  main.rs  utils.rs
