[package]
authors = ["mmdbalkhi <ahmdparsh129@gmail.com>"]
description = "a rust program to show github notifications"
edition = "2021"
homepage = "https://github.com/mmdbalkhi/gh-notify/"
license-file = "LICENSE"
name = "gh-notify"
readme = "README.md"
repository = "https://github.com/mmdbalkhi/gh-notify/"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
dirs = "5.0.0"
notify-rust = "4.5.8"
reqwest = {version = "0.11.11", features = ["json"]}
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = {version = "1.21.0", features = ["full"]}
toml = "0.5.9"
